fixed spacing on quiz

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -93,7 +93,7 @@ html, body {
     width: 100%; 
     text-align: center;
     padding-top: 1rem;
-    padding-bottom: 2.5rem;
+    padding-bottom: 0rem;
     font-size: 50px;
     color:#7B5F49ff;
 }
@@ -388,6 +388,7 @@ button {
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     display: flex; /*added*/
+    margin-top: 0px;
     justify-content: center;
     align-items: center;
     height: 100%;
@@ -410,8 +411,11 @@ button {
 }
 
 .page-title {
-    padding: 50px 0; 
-    margin-top: 0; 
+    margin-top: 0em; 
+    margin-bottom: 0em;
+}
+.page-title header {
+    margin-bottom: 0em;
 }
 
 .page-title h2 {
